Remove manual autorefreshing. Fix advertisement alignment.

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body {
 
 .advertisement {
     display: none;
+    margin: auto;
     max-width: 100%;
     max-height: 100%;
 }
